styles.css
* {
  font-family: 'Open Sans', sans-serif;
}

body {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

aside {
  background-color: #1F1F3D;
  background-size: 100%;
  width: 25vw;
  height: 100vh
}

aside h1 {
  color: #E9E9F3;
  font-size: 2.4em;
  padding-left: 1em;
}

.filter-aside-section {
  border-top: 3px solid #353567;
  border-bottom: 3px solid #353567;
}

h4 {
  color: #BFBFDD;
  font-size: 1.8em;
  font-weight: bold;
  padding-left: 1em;
} 

.show-starred {
  color: #E9E9F3;
  background-color: #5356A4;
  font-size: 2.2em;
  font-weight: bold;
  margin: .5em 1em 1.6em 1em;
  padding: .4em 1.2em .5em .9em;
}

.form {
  display: flex;
  justify-content: center; 
  background-color: #A9AAD2;
  width: 75vw
  }

.form-style {
  display: flex;
  flex-direction: column;
  padding: 1em 30em 4em 30em; 
}

#title-input {
  width: 100%;
  box-sizing: border-box;
  border: .1em solid #5356A4;
  border-radius: 6px;
  padding: 4%;
  margin: 1em 0em;
  font-weight: bold;
  font-size: xx-large;
}

label {
  color: #1F1F3D;
  font-weight: bold;
  font-size: 1.8em;
}
  
#body-input {
  width: 100%;
  box-sizing: border-box;
  border: .1em solid #5356A4;
  border-radius: .3em;
  padding: 10%; 
  margin: 1em 0em;
  font-weight: bold;
  font-size: xx-large;
}

.searchbar-container {
  display: flex;
  flex-direction: row;
  border: .1em solid #5356A4;
  border-radius: 6px;
}
  
#magnify-glass {
  background-color: #353567;
  padding: .2em 1.5em;
  max-width: 3em;
}
  
.save-button {
  font-size: 2.5em;
  background-color: #5356A4;
  border: .1em solid #5356A4;
  border-radius: 6px;
  color: #E9E9F3;
  padding: 2%; 
  font-weight: bold; 
  margin: 1em 0em;
}

.hover:hover {
  cursor: pointer;
}

.activeSaveBtn {
  background-color: #1F1F3D;
}

#searchbar {
  border: 3px solid #5356A4;
  border-radius: 6px;
  padding: 2.5%; 
  width: 40vw;
  font-size: 1.9em;
  color: #5356A4;
}

.idea-boxes-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: wrap;
  background-color: #EAEAF4;
  width: 75vw;
  height: 100vh;
}

.idea-box {
  width: 300px;
  height: 20vh;
  margin: 1em; 
}

.card-top {
  background-color: #1F1F3D;
  border: 1px solid #1F1F3D;
  padding: .1em;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-height: 3.4em;
}

.card-star, #delete-icon, #comment-plus-icon {
  max-width: 3.2em;
}

h5 {
  font-size: 2em;
  font-weight: bold;
  margin: 0em 0em 0em 1em;
}

.card-body {
  background-color: #FFFFFF;
  padding: 15px;
  border: .2em solid #1F1F3D;
  overflow-wrap: break-word;
}

#card-text {
  font-size: 2.2em;
  font-weight: 200;
  color: #1F1F3D;
  margin: .3em 1em 1em 1em;
}

.card-bottom {
  background-color: #5356A4;
  border-right: .1em solid #1F1F3D;
  border-bottom: .1em solid #1F1F3D;
  border-left: .1em solid #1F1F3D;
  display: flex;
  flex-direction: row;
  align-content: center;
  justify-content: flex-start;
  align-items: center;
  margin: 0px;
  max-height: 3.4em;
}

#white-comment {
  color: #E9E9F3;
  font-size: 1.5em;
}

